[gd_scene load_steps=4 format=3 uid="uid://cwwlj02ge0v6e"]

[ext_resource type="Texture2D" uid="uid://c5qare21gyn61" path="res://Assets/bg.png" id="1_f6r21"]
[ext_resource type="FontFile" uid="uid://b4wlpcoccn8e7" path="res://Assets/TRON.TTF" id="3_y66bu"]
[ext_resource type="Script" uid="uid://cuy2bvelvoyvm" path="res://CharacterScreen.gd" id="4_y66bu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 46.0
offset_bottom = 44.0
script = ExtResource("4_y66bu")
metadata/_edit_horizontal_guides_ = [-42.0]

[node name="Background" type="ColorRect" parent="."]
texture_filter = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14406255, 0.14406255, 0.14406255, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.125
anchor_top = -0.075
anchor_right = 29.075
anchor_bottom = 16.35
offset_left = -136.0
offset_top = 3.0
offset_right = 202.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f6r21")
expand_mode = 1

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(300, 40)
layout_mode = 0
offset_left = 221.0
offset_top = 133.0
offset_right = 1000.0
offset_bottom = 272.0
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_y66bu")
theme_override_font_sizes/font_size = 60
text = "The Grid"
horizontal_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 558.0
offset_right = 132.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 20
text = "Zurück"

[node name="EnterWorldButton" type="Button" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 491.0
offset_top = 552.0
offset_right = 723.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 30
text = "Enter World"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 922.0
offset_top = 23.0
offset_right = 1222.0
offset_bottom = 611.0

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 3
theme_override_font_sizes/font_size = 25
text = "Charakter auswählen"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="CharListContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.11
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
text = "Neuer Charakter"
